# nomo

./: Cargo.toml  Dockerfile  README.md  azure-pipelines.yml
docs/: design.md
frame/registry/: Cargo.toml
frame/registry/src/: lib.rs
primitives/domain/: Cargo.toml
primitives/domain/src/: label.rs  lib.rs  namehash.rs
runtime/: Cargo.toml  build.rs
runtime/src/: lib.rs
src/: chain_spec.rs  cli.rs  command.rs  lib.rs  main.rs  rpc.rs  service.rs
