[package]
name = "pallet-registry"
version = "0.1.0"
authors = ["Wei Tang <wei@that.world>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/nomonetwork/nomo"
description = "Domain registry runtime pallet for Nomo."

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.6", default-features = false }
frame-support = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-balances = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-runtime = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-std = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-io = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }

frame-benchmarking = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", optional = true }

[dev-dependencies]
sp-core = { version = "2.0.0", git = "https://github.com/paritytech/substrate", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"sp-io/std",
	"sp-std/std"
]
runtime-benchmarks = ["frame-benchmarking"]
